--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="project-placeholder">
-                        <img src="./img/project/p2.png">
+                        <img src="./img/project/p3.png">
                         <h3>Simple Calculator</h3>
                         <p>A <i>Simple Calculator</i> containing a simple functioning calcualtions.<br><br>Language used: <strong>HTML5, CSS, JS</strong></p>
-                        <a href="https://sumant-proposal.vercel.app/">
+                        <a href="https://simple-calculator-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
@@ -75,10 +75,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="project-placeholder">
-                        <img src="./img/project/p2.png">
+                        <img src="./img/project/p4.png">
                         <h3>Golu Video Webpage</h3>
                         <p>A Simple Website For my Friend For his Wedding PhotoGraphy Business.<br><br>Langauage used : <strong>HTML5, CSS,JS</strong></p>
-                        <a href="https://sumant-proposal.vercel.app/">
+                        <a href="https://golu-video.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
@@ -87,8 +87,8 @@
                 <div class="col-md-4">
                     <div class="project-placeholder">
                         <img src="./img/project/p2.png">
-                        <h3>Golu Video Webpage</h3>
-                        <p>A Simple Website For my Friend For his Wedding PhotoGraphy Business.<br><br>Langauage used : <strong>HTML5, CSS,JS</strong></p>
+                        <h3>Attendence Calculator</h3>
+                        <p>A Webpage where you can easily check your attendence info Like <i>lecture bunk, lecture attend.. etc..</i><br><br> Language used : <strong>HTML5, CSS, JS</strong></p>
                         <a href="https://sumant-proposal.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
