--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="https://sumant-proposal.vercel.app/">
                           <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                         </a>
-                        <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
+                        <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -70,7 +70,7 @@
                         <a href="https://simple-calculator-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                       </div>
                 </div>
                 <div class="col-md-4">
@@ -81,7 +81,7 @@
                         <a href="https://golu-video.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
                 <div class="col-md-4">
@@ -92,18 +92,18 @@
                         <a href="https://sumant-proposal.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
                 <div class="col-md-4">
                     <div class="project-placeholder">
-                        <img src="./img/project/p2.png">
+                        <img src="./img/project/p6.png">
                         <h3>Birthday Wisher</h3>
                         <p>A webpage with multiple segment containing element used to wish <i>Your Crush !</i> With a song plays in the background<br><br> Language used : <strong>HTML5, CSS, JS</strong></p>
-                        <a href="https://sumant-proposal.vercel.app/">
+                        <a href="https://hbd-crush-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/proposal"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
             </div>
