--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <h3>Attendence Calculator</h3>
                         <p>A Webpage where you can easily check your attendence info Like <i>lecture bunk, lecture attend.. etc..</i><br><br> Language used : <strong>HTML5, CSS, JS</strong></p>
                         <a href="https://sumant-proposal.vercel.app/">
-                            <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
+                            <button class="btn btn-primary" href="https://attendencecalculator-sumant.vercel.app/">Visit Website</button>
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
@@ -101,7 +101,7 @@
                         <h3>Birthday Wisher</h3>
                         <p>A webpage with multiple segment containing element used to wish <i>Your Crush !</i> With a song plays in the background<br><br> Language used : <strong>HTML5, CSS, JS</strong></p>
                         <a href="https://hbd-crush-sumant.vercel.app/">
-                            <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
+                            <button class="btn btn-primary" href="https://hbd-crush-sumant.vercel.app/">Visit Website</button>
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
