--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img src="./img/project/p5.png">
                         <h3>Attendence Calculator</h3>
                         <p>A Webpage where you can easily check your attendence info Like <i>lecture bunk, lecture attend.. etc..</i><br><br> Language used : <strong>HTML5, CSS, JS</strong></p>
-                        <a href="https://sumant-proposal.vercel.app/">
+                        <a href="https://attendencecalculator-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://attendencecalculator-sumant.vercel.app/">Visit Website</button>
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
