--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
-                <div class="col-md-4">
+<!--                 <div class="col-md-4">
                     <div class="project-placeholder">
                         <img src="./img/project/p5.png">
                         <h3>Image searcher </h3>
@@ -116,7 +116,7 @@
                           </a>
                           <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
                        </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
