--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="https://simple-calculator-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://sumant-proposal.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/simple-calculator"><button class="btn btn-secondary">Source code</button></a>
                       </div>
                 </div>
                 <div class="col-md-4">
@@ -92,7 +92,7 @@
                         <a href="https://attendencecalculator-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://attendencecalculator-sumant.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/Attendence-calc"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
                 <div class="col-md-4">
@@ -103,20 +103,20 @@
                         <a href="https://hbd-crush-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://hbd-crush-sumant.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/Birthday-wish"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
-<!--                 <div class="col-md-4">
+                <div class="col-md-4">
                     <div class="project-placeholder">
-                        <img src="./img/project/p5.png">
+                        <img src="./img/project/p6.png">
                         <h3>Image searcher </h3>
                         <p>A ReactJS APP in Which you can search the image..</i><br><br> Language used : <strong>REACT JS, API(Unsplash)</strong></p>
-                        <a href="https://attendencecalculator-sumant.vercel.app/">
-                            <button class="btn btn-primary" href="https://attendencecalculator-sumant.vercel.app/">Visit Website</button>
+                        <a href="https://imagesearch-sumant.vercel.app/">
+                            <button class="btn btn-primary" href="https://imagesearch-sumant.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/image-searcher"><button class="btn btn-secondary">Source code</button></a>
                        </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -126,4 +126,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
