--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                 <div class="col-md-4">
                     <div class="project-placeholder">
                         <img src="./img/project/p6.png">
-                        <h3>Image searcher </h3>
-                        <p>A ReactJS APP in Which you can search the image..</i><br><br> Language used : <strong>REACT JS, API(Unsplash)</strong></p>
+                        <h3>🌤️ Weather Forecast App</h3>
+                        <p>based weather forecast application that provides real-time weather updates using the OpenWeatherMap API. Users can search for any city worldwide
+                    </i><br><br> Language used : <strong>REACT JS,CSS, API(Open weather)</strong></p>
                         <a href="https://imagesearch-sumant.vercel.app/">
                             <button class="btn btn-primary" href="https://imagesearch-sumant.vercel.app/">Visit Website</button>
                           </a>
