--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                         <p>based weather forecast application that provides real-time weather updates using the OpenWeatherMap API. Users can search for any city worldwide
                     </i><br><br> Language used : <strong>REACT JS,CSS, API(Open weather)</strong></p>
                         <a href="https://imagesearch-sumant.vercel.app/">
-                            <button class="btn btn-primary" href="https://imagesearch-sumant.vercel.app/">Visit Website</button>
+                            <button class="btn btn-primary" href="https://weather-forecast-sumant.vercel.app/">Visit Website</button>
                           </a>
-                          <a href="https://github.com/skr-sumant/Mini-Projects/tree/main/image-searcher"><button class="btn btn-secondary">Source code</button></a>
+                          <a href="https://github.com/skr-sumant/weather_forecast"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
             </div>
@@ -127,6 +127,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
