--- a/index.html
+++ b/index.html
@@ -118,6 +118,32 @@
                           <a href="https://github.com/skr-sumant/weather_forecast"><button class="btn btn-secondary">Source code</button></a>
                        </div>
                 </div>
+                  <div class="col-md-4">
+                    <div class="project-placeholder">
+                        <img src="./img/project/p7.png">
+                        <h3>Game webpage</h3>
+                        <p>A webpage with multiple Game segment containing element used to play <br><br> Language used : <strong>React JS with <i>Material UI </i></strong></p>
+                       
+                            <button class="btn btn-primary" href="https://logicalgame-sumant.vercel.app/">Visit Website</button>
+                          </a>
+                          <a href="https://github.com/skr-sumant/Logic-Game-project"><button class="btn btn-secondary">Source code</button></a>
+                       </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="project-placeholder">
+                        <img src="./img/project/p8.png">
+                        <h3>Image Search App</h3>
+                        <p>
+                            A React-based web app that fetches high-quality images dynamically from the <strong>Unsplash API</strong>.Users can search and explore millions of photos with responsive results and smooth UI.
+      <br><br>
+      Language used : <strong>React.js, JavaScript, CSS, Unsplash API</strong>
+                        </p>
+                       
+                            <button class="btn btn-primary" href="https://imgallery-sumant.vercel.app/">Visit Website</button>
+                          </a>
+                          <a href="https://github.com/skr-sumant/Image-Gallery"><button class="btn btn-secondary">Source code</button></a>
+                       </div>
+                </div>
             </div>
         </div>
     </section>
@@ -127,6 +153,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
